dropdown menu bug fix
was hidden behind chart

--- a/charlie/analysis/static/analysis/css/sidebar.css
+++ b/charlie/analysis/static/analysis/css/sidebar.css
@@ -41,7 +41,7 @@
 	display:none;
 }
 
-.arrow{
+.farrow{
 	font-size:12px;
 	padding-right:10px;
 }
